# proto-scan

./: Cargo.toml  README.md  rustc-ice-2026-02-22T18_47_40-28356.txt  rustc-ice-2026-02-22T18_47_42-28597.txt
proto-lens/: Cargo.toml
proto-lens-protoc-ext/: Cargo.toml
proto-lens-protoc-ext/src/: lib.rs
proto-lens-protoc-ext/src/generate/: message.rs  mod.rs
proto-lens-protoc-ext/src/generate/message/: field.rs
proto-lens-protoc-tests/: Cargo.toml  build.rs
proto-lens-protoc-tests/src/: lib.rs
proto-lens-protoc-tests/src/proto/: testing.proto
proto-lens-scan/: Cargo.toml
proto-lens-scan/src/: lib.rs
proto-lens-tests/: Cargo.toml  build.rs
proto-lens-tests/src/: lib.rs
proto-lens-tests/src/proto/: testing.proto
proto-lens-tests/tests/: scan_prototype.rs  serialized_proto.rs
proto-lens/src/: lib.rs  read.rs
proto-lens/src/read/: count_reader.rs  mod.rs
proto-lens/src/visitor/: build.rs  mod.rs  visit_message.rs
proto-lens/src/wire/: field_number.rs  mod.rs  parse.rs  tag.rs  wire_type.rs
proto-lens/src/wire/parse/: event_reader.rs  length_delimited.rs  limit_reader.rs  mod.rs  scalar_iter.rs
proto-scan/: Cargo.toml
proto-scan-build/: Cargo.toml
proto-scan-build/src/: config.rs  lib.rs
proto-scan-build/src/generate/: mod.rs
proto-scan-build/src/generate/message/: field.rs  mod.rs
proto-scan-derive/: Cargo.toml
proto-scan-derive/src/: lib.rs
proto-scan-gen/: Cargo.toml
proto-scan-gen/src/: lib.rs  oneof.rs  prost.rs  scanner.rs
proto-scan-gen/src/field/: mod.rs  scanner.rs
proto-scan-gen/src/message/: mod.rs  scanner.rs
proto-scan-gen/src/oneof/: mod.rs  scanner.rs
proto-scan-tests/: Cargo.toml  build.rs
proto-scan-tests/benches/: basic.rs
proto-scan-tests/src/: lib.rs
proto-scan-tests/src/proto/: anymap.proto  empty_message.proto  groups.proto  map.proto  oneof.proto  optional.proto  raw_identifiers.proto  testing.proto
proto-scan-tests/tests/: codegen.rs  derive.rs  nostd.rs  serialized_proto.rs
proto-scan-tests/tests/cases/: bytes.rs  custom_field_scanner.rs  embedded_message.rs  enums.rs  events.rs  groups.rs  map.rs  merge_semantics.rs  mod.rs  oneof.rs  raw_identifiers.rs  read_all.rs  repeated.rs  repeated_numeric.rs  repeated_scalar.rs  single_numeric.rs  single_scalar.rs
proto-scan/examples/: zip_code.rs
proto-scan/src/: decode_error.rs  lib.rs
proto-scan/src/read/: bounds_only.rs  count_reader.rs  mod.rs
proto-scan/src/scan/: builder.rs  delimited.rs  encoding.rs  error.rs  map.rs  mod.rs  repeated.rs  resettable.rs  save_from.rs
proto-scan/src/scan/field/: emit.rs  emit_scalar.rs  group.rs  invoke_on.rs  map.rs  message.rs  mod.rs  no_op.rs  repeated.rs  save.rs  write.rs
proto-scan/src/scan/field/save/: bytes.rs  cast.rs  map.rs  mod.rs  numeric.rs  optional.rs  repeated.rs
proto-scan/src/scan/field/write/: bytes.rs  mod.rs  numeric.rs  restore.rs
proto-scan/src/scan/group/: delimited.rs  error.rs  mod.rs  stack.rs
proto-scan/src/visitor/: build.rs  mod.rs
proto-scan/src/wire/: group_op.rs  mod.rs  numeric_field.rs  scalar_field.rs  tag.rs  wire_type.rs
proto-scan/src/wire/parse/: callbacks.rs  event_reader.rs  length_delimited.rs  limit_reader.rs  mod.rs  numeric_iter.rs  tail_call.rs
src/: lib.rs
src/visitor/: mod.rs
src/wire/: mod.rs  tag.rs
