[workspace]
members = [
    "proto-scan",
    "proto-scan-build",
    "proto-scan-derive",
    "proto-scan-gen",
    "proto-scan-tests",
]
resolver = "3"

[workspace.package]
version = "0.3.0"
authors = ["Alex Bakon"]
repository = "https://github.com/akonradi/proto-scan"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
proto-scan = { path = "./proto-scan", version = "0.3.0" }
proto-scan-build = { path = "./proto-scan-build", version = "0.3.0"  }
proto-scan-derive = { path = "./proto-scan-derive", version = "0.3.0"  }
proto-scan-gen = { path = "./proto-scan-gen", version = "0.3.0" }

arrayvec = { version = "0.7.6", default-features = false }
assert_matches = "1.5.0"
bytes = "1"
bytes-utils = "0.1"
derive_more = { version = "2.1.1", features = ["from", "into", "try_from"] }
either = "1.15.0"
hex-literal = "1.1.0"
itertools = "0.14.0"
log = "0.4"
num-traits = "0.2.19"
proc-macro2 = "1.0"
prost = "0.14.3"
prost-build = "0.14.3"
prost-types = "0.14.3"
quote = "1.0"
static_assertions = "1.1"
syn = "2.0"
test-case = "3"