[package]
name = "proto-lens-protoc-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
either = "1.15.0"
prost = "0.14.3"
prost-types = "0.14.3"
proto-lens-scan = { path = "../proto-lens-scan" }

[build-dependencies]
prost-build = "0.14.3"
protoc = "2.28"
proto-lens-protoc-ext = { path = "../proto-lens-protoc-ext"}
