[package]
name = "proto-scan-build"
description = "Code generation for proto-scan from protocol buffer message descriptors."
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
derive_more = { workspace = true }
either = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
proc-macro2 = { workspace = true }
prost = { workspace = true }
prost-build = { workspace = true }
prost-types = { workspace = true }
proto-scan-gen = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
