[package]
name = "proto-scan-derive"
description = "Derive macros for proto-scan crate"
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
derive_more = { workspace = true }
proto-scan-gen = { workspace = true }
proc-macro2 = { workspace = true }
syn = { workspace = true, features = ["extra-traits"] }