[package]
name = "proto-scan-gen"
description = "Code generation library for proto-scan crate"
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true
rust-version.workspace = true


[dependencies]
convert_case = "0.11.0"
derive_more = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
