[package]
name = "proto-scan-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
either = "1.15.0"
prost = "0.14.3"
prost-types = "0.14.3"
proto-scan = { path = "../proto-scan", features = ["derive"]}

[build-dependencies]
prost-build = "0.14.3"
proto-scan-build = { path = "../proto-scan-build" }
