[package]
name = "proto-scan-tests"
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
either = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
proto-scan = { workspace = true, features = ["derive"]}
test-case = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
proto-scan-build = { workspace = true }