[package]
name = "proto-scan"
readme = "../README.md"
description = "Scan protocol buffer messages as event streams, or to extract individual fields."
keywords = [
    "proto", "protobuf", "protocol", "buffer",
    "scan", "binary", "read", "field", "wire", "parse"
]
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[features]
derive = ["dep:proto-scan-derive"]

[dependencies]
assert_matches = { workspace = true }
derive_more = { workspace = true }
either = { workspace = true }
num-traits = { workspace = true }
proto-scan-derive = { workspace = true , optional = true }

[dev-dependencies]
hex-literal = { workspace = true }
