[package]
name = "proto-scan"
readme = "../README.md"
description = "Scan protocol buffer messages as event streams, or to extract individual fields."
keywords = [ "proto", "protobuf", "scan", "parse", "read" ]
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[features]
default = ["bytes", "derive", "std"]
bytes = ["dep:bytes", "dep:bytes-utils"]
derive = ["dep:proto-scan-derive"]
std = []

[dependencies]
assert_matches = { workspace = true }
bytes = { workspace = true, optional = true }
bytes-utils = { workspace = true, optional = true }
derive_more = { workspace = true }
either = { workspace = true }
num-traits = { workspace = true }
proto-scan-derive = { workspace = true , optional = true }

[dev-dependencies]
arrayvec = { workspace = true, default-features = false }
hex-literal = { workspace = true }
# For documentation
prost = { workspace = true }

[package.metadata.docs.rs]
all-features = true
